--- a/Wizard BattleSim/Packages/manifest.json
+++ b/Wizard BattleSim/Packages/manifest.json
@@ -10,6 +10,7 @@
     "com.unity.netcode.gameobjects": "1.9.1",
     "com.unity.nuget.newtonsoft-json": "3.2.1",
     "com.unity.postprocessing": "3.4.0",
+    "com.unity.services.multiplayer": "1.0.0",
     "com.unity.shadergraph": "14.0.11",
     "com.unity.sharp-zip-lib": "1.3.8",
     "com.unity.textmeshpro": "3.0.6",
