--- a/Wizard BattleSim/Packages/manifest.json
+++ b/Wizard BattleSim/Packages/manifest.json
@@ -18,6 +18,7 @@
     "com.unity.postprocessing": "3.4.0",
     "com.unity.render-pipelines.high-definition": "17.0.3",
     "com.unity.render-pipelines.high-definition-config": "17.0.3",
+    "com.unity.rendering.denoising": "1.0.5",
     "com.unity.shadergraph": "17.0.3",
     "com.unity.sharp-zip-lib": "1.3.9",
     "com.unity.timeline": "1.8.7",
