--- a/Wizard BattleSim/.gitattributes
+++ b/Wizard BattleSim/.gitattributes
@@ -1,3 +1,3 @@
 *.png filter=lfs diff=lfs merge=lfs -text
-.cubemap filter=lfs diff=lfs merge=lfs -text
-.mat filter=lfs diff=lfs merge=lfs -text
+*.cubemap filter=lfs diff=lfs merge=lfs -text
+
